--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,10 @@
 
     <link rel="stylesheet" href="{{ get_url(path="main.css", trailing_slash=false) }}">
 
+    {% if config.extra.katex %}
+        {% include 'katex.html' %}
+    {% endif %}
+
     {% block extra_head %}
     {% endblock extra_head %}
 </head>
